--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: black;
     background-image: radial-gradient(
-      rgba(0, 100, 167, 0.493), black 120%
+      rgba(0, 100, 167, 0.212), black 120%
     );
     height: 100vh;
     color: white;
@@ -26,6 +26,7 @@ body {
     left:0;
     right:0;
     margin:auto;
+    animation: flicker 0.002s linear infinite;
 }
 
 .small {
@@ -213,3 +214,20 @@ body ::after {
   }
 
   
+  @keyframes 
+  flicker {
+    50% {
+      opacity: 0.2;
+    }
+  }
+
+  .blink_me {
+    animation: blinker 1s linear infinite;
+  }
+  
+  @keyframes
+   blinker {
+    50% {
+      opacity: 0;
+    }
+  }
