--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
     left:0;
     right:0;
     margin:auto;
-    animation: flicker 0.002s linear infinite;
+    animation: flicker 0.001s linear infinite;
 }
 
 .small {
@@ -56,6 +56,7 @@ body {
     border-radius: 0%;
     font-size: 20px;
     z-index: 100;
+    animation: flicker-in-1 2s linear both;
 }
 
 .btn:focus {
@@ -69,7 +70,7 @@ pushForward {position: relative;}
 
 body ::after {
     content: "";
-    position: absolute;
+    
     top: 0;
     left: 0;
     width: 100vw;
@@ -217,7 +218,6 @@ body ::after {
   .crt::after {
     content: " ";
     display: block;
-    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
@@ -261,3 +261,100 @@ body ::after {
       opacity: 0;
     }
   }
+
+  @keyframes flicker-in-1 {
+    0% {
+      opacity: 0;
+    }
+    10% {
+      opacity: 0;
+    }
+    10.1% {
+      opacity: 1;
+    }
+    10.2% {
+      opacity: 0;
+    }
+    20% {
+      opacity: 0;
+    }
+    20.1% {
+      opacity: 1;
+    }
+    20.6% {
+      opacity: 0;
+    }
+    30% {
+      opacity: 0;
+    }
+    30.1% {
+      opacity: 1;
+    }
+    30.5% {
+      opacity: 1;
+    }
+    30.6% {
+      opacity: 0;
+    }
+    45% {
+      opacity: 0;
+    }
+    45.1% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 1;
+    }
+    55% {
+      opacity: 1;
+    }
+    55.1% {
+      opacity: 0;
+    }
+    57% {
+      opacity: 0;
+    }
+    57.1% {
+      opacity: 1;
+    }
+    60% {
+      opacity: 1;
+    }
+    60.1% {
+      opacity: 0;
+    }
+    65% {
+      opacity: 0;
+    }
+    65.1% {
+      opacity: 1;
+    }
+    75% {
+      opacity: 1;
+    }
+    75.1% {
+      opacity: 0;
+    }
+    77% {
+      opacity: 0;
+    }
+    77.1% {
+      opacity: 1;
+    }
+    85% {
+      opacity: 1;
+    }
+    85.1% {
+      opacity: 0;
+    }
+    86% {
+      opacity: 0;
+    }
+    86.1% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
